fix(date-picker): Remove negative margin to prevent UI bug causing flickering when datepicker was near bottom of screen

--- a/src/stylesheets/datepicker.scss
+++ b/src/stylesheets/datepicker.scss
@@ -33,7 +33,7 @@
   }
 
   &[data-placement^="top"] {
-    margin-bottom: $datepicker__triangle-size - 2px;
+    margin-bottom: $datepicker__triangle-size + 2px;
 
     .react-datepicker__triangle {
       @extend %triangle-arrow-down;
